k8s/testing/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: morda-testing
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
